--- a/client/clone-trello/src/screens/Home/Home.css
+++ b/client/clone-trello/src/screens/Home/Home.css
@@ -7,7 +7,7 @@
 
 .container-boards {
     /* margin-top: 50px; */
-    /* background: url('../../assets/image/BackgroundKanban.png'); */
+    background: url('../../assets/image/BackgroundKanban.png');
     background-color: #37465bd2;
     background-repeat: no-repeat;
     /* padding: 20px; */
